--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,15 +41,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 
-
-// fonts
-
     implementation "com.mikepenz:materialdrawer:7.0.0"
+// Add for NavController support
     implementation "com.mikepenz:materialdrawer-nav:7.0.0"
-    implementation "com.mikepenz:materialdrawer-iconics:7.0.0"
+
+// Add for Android-Iconics support
+//    implementation "com.mikepenz:materialdrawer-iconics:7.0.0"
 }
