--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation "com.mikepenz:materialdrawer:7.0.0"
 // Add for NavController support
     implementation "com.mikepenz:materialdrawer-nav:7.0.0"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 // Add for Android-Iconics support
 //    implementation "com.mikepenz:materialdrawer-iconics:7.0.0"
