--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android-extensions'
+    id'com.google.gms.google-services'
 }
 
 android {
@@ -50,12 +51,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-
     implementation "com.mikepenz:materialdrawer:7.0.0"
-// Add for NavController support
     implementation "com.mikepenz:materialdrawer-nav:7.0.0"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-// Add for Android-Iconics support
-//    implementation "com.mikepenz:materialdrawer-iconics:7.0.0"
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth'
 }
