--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android-extensions'
-    id'com.google.gms.google-services'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -54,9 +54,11 @@ dependencies {
     implementation "com.mikepenz:materialdrawer:7.0.0"
     implementation "com.mikepenz:materialdrawer-nav:7.0.0"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
+    implementation'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firebase:firebase-storage'
+
 }
