--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
-
-
     }
     dependencies {
+        classpath 'com.android.tools.build:gradle:3.6.4'
         classpath 'com.google.gms:google-services:4.3.10'
     }
 
 }
-
 
 plugins {
     id 'com.android.application' version '7.1.3' apply false
@@ -25,3 +21,4 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
